--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           I’m a software developer and it is my portfolio website. Here you’ll
           learn about my journey as a software developer.
         </p>
-        <a class="btn" href="assets/Priyanshi.pdf" target="_blank" download>Hire me</a>
+        <a class="btn" href="assets/final2.pdf" target="_blank" download>Hire me</a>
       </div>
 
       <!-- right -->
@@ -122,7 +122,7 @@
       </div>
 
       <!-- button for small screens -->
-      <a class="btn extra-btn" href="assets/Priyanshi.pdf" target="_blank" download>Hire me</a>
+      <a class="btn extra-btn" href="assets/final2.pdf" target="_blank" download>Hire me</a>
     </section>
 
     <!-- /////// projects section /////////// -->
@@ -135,27 +135,27 @@
           <div class="project-number">01</div>
           <div class="project-content">
             <div class="project-skills-container">
-              <img src="images/stack/HTML.png" alt="html" />
-              <img src="images/stack/CSS.png" alt="css" />
+              <img src="images/stack/React.png" alt="react" />
+              <img src="images/stack/Tailwind.png" alt="css" />
               <img src="images/stack/Javascript.svg" alt="javascript" />
             </div>
 
-            <h2>Tic Tac Toe</h2>
+            <h2>Equalizer</h2>
 
             <p>
-              It is a Tic-Tac-Toe game built with Html, Css and Javascript
+              It is a Equalizer makes split of bills easy . Made with React.js and Firebase
             </p>
 
             <div class="project-buttons">
-              <a class="btn" href="https://priyanshi31487.github.io/ticTacToe-/" target="_blank">
+              <a class="btn" href="https://my-equalizer.vercel.app/" target="_blank">
                 Read More
                 <span class="screen-reader-text">learn more</span>
               </a>
-              <a href="https://github.com/priyanshi31487/ticTacToe-" target="_blank" aria-label="github">
+              <a href="https://github.com/priyanshi31487/Equalizer/tree/main" target="_blank" aria-label="github">
                 <i class="fa-brands fa-github icons"></i>
               </a>
 
-              <a href="https://github.com/priyanshi31487/ticTacToe-" target="_blank" aria-label="link">
+              <a href="https://github.com/priyanshi31487/Equalizer/tree/main" target="_blank" aria-label="link">
                 <i class="fa-solid fa-link icons"></i>
               </a>
             </div>
@@ -201,27 +201,27 @@
           <div class="project-number">03</div>
           <div class="project-content">
             <div class="project-skills-container">
-              <img src="images/stack/HTML.png" alt="" />
-              <img src="images/stack/CSS.png" alt="" />
-              <img src="images/stack/Javascript.svg" alt="" />
+              <img src="images/stack/machine-learning-model.svg" alt="" />
+              <img src="images/stack/MaterialUI.svg" alt="" />
+              <img src="images/stack/streamlit-logo-secondary-colormark-darktext.png" alt="" />
             </div>
 
-            <h2>Counter App</h2>
+            <h2>makePDFeasy</h2>
 
             <p>
-              A Counter Application which has functionalities like Increment, Decrement, Reset counter value etc.
+              A web Application to intreact with multiple PDFs and Q/A with pdfs using Gen AI and NLP .
             </p>
 
             <div class="project-buttons">
-              <a class="btn" href="https://priyanshi31487.github.io/Counter/" target="_blank">
+              <a class="btn" href="https://github.com/priyanshi31487/makePDFeasy/" target="_blank">
                 Read More
                 <span class="screen-reader-text">learn more</span>
               </a>
-              <a href="https://github.com/priyanshi31487/Counter" target="_blank" aria-label="github">
+              <a href="https://github.com/priyanshi31487/makePDFeasy/" target="_blank" aria-label="github">
                 <i class="fa-brands fa-github icons"></i>
               </a>
 
-              <a href="https://github.com/priyanshi31487/Counter" target="_blank" aria-label="link">
+              <a href="https://github.com/priyanshi31487/makePDFeasy/" target="_blank" aria-label="link">
                 <i class="fa-solid fa-link icons"></i>
               </a>
             </div>
