--- a/index.html
+++ b/index.html
@@ -169,26 +169,25 @@
           <div class="project-content">
             <div class="project-skills-container">
               <img src="images/stack/HTML.png" alt="" />
-              <img src="images/stack/CSS.png" alt="" />
-              <img src="images/stack/Javascript.svg" alt="" />
+              <img src="images/stack/machine-learning-model.svg" alt="" />
+              <img src="images/stack/download.jpg" alt="" />
             </div>
 
-            <h2>password generator</h2>
+            <h2>Signal Talk</h2>
 
-            <p>A password generator app which can be used for creating random passwords 
-              according to the inputs set by the user
+            <p>SIGNTALKS is a project aimed at converting voice and text to animations in sign language, providing a tool to facilitate communication for the deaf community.
             </p>
 
             <div class="project-buttons">
-              <a class="btn" href="https://priyanshi31487.github.io/PasswordGenerator/" target="_blank">
+              <a class="btn" href="https://github.com/priyanshi31487/SIGNTALKS/" target="_blank">
                 Read More
                 <span class="screen-reader-text">learn more</span>
               </a>
-              <a href="https://github.com/priyanshi31487/PasswordGenerator" target="_blank" aria-label="github">
+              <a href="https://github.com/priyanshi31487/SIGNTALKS" target="_blank" aria-label="github">
                 <i class="fa-brands fa-github icons"></i>
               </a>
 
-              <a href="https://github.com/priyanshi31487/PasswordGenerator" target="_blank" aria-label="link">
+              <a href="https://github.com/priyanshi31487/SIGNTALKS" target="_blank" aria-label="link">
                 <i class="fa-solid fa-link icons"></i>
               </a>
             </div>
